media query to fix title on iphone

--- a/styles/main.css
+++ b/styles/main.css
@@ -58,3 +58,9 @@ body, html {
 .network:hover {
   opacity: 0.6;
 }
+
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 14px;
+  }
+}
